ДЗ/2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      labels:
        app: otus-homework
    spec:
        containers:
        - name: otus-homework
          image: mrphelko/otus-ms-first:latest
          ports:
            - name: web
              containerPort: 8000
